--- a/ide/frames/editor_codetools_options.lfm
+++ b/ide/frames/editor_codetools_options.lfm
@@ -1,8 +1,8 @@
 inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
-  Height = 389
-  Width = 537
-  ClientHeight = 389
-  ClientWidth = 537
+  Height = 492
+  Width = 634
+  ClientHeight = 492
+  ClientWidth = 634
   TabOrder = 0
   Visible = False
   DesignLeft = 348
@@ -12,10 +12,10 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 435
-    Height = 14
-    Top = 150
-    Width = 96
+    Left = 501
+    Height = 18
+    Top = 186
+    Width = 127
     Alignment = taRightJustify
     Anchors = [akTop, akRight]
     BorderSpacing.Top = 2
@@ -28,9 +28,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = AutoDelayTrackBar
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 14
-    Top = 150
-    Width = 92
+    Height = 18
+    Top = 186
+    Width = 123
     BorderSpacing.Left = 6
     BorderSpacing.Top = 2
     Caption = 'AutoDelayMinLabel'
@@ -41,10 +41,10 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = AutoDelayMinLabel
     AnchorSideTop.Side = asrCenter
-    Left = 104
-    Height = 14
-    Top = 150
-    Width = 76
+    Left = 135
+    Height = 18
+    Top = 186
+    Width = 101
     BorderSpacing.Left = 6
     BorderSpacing.Top = 24
     Caption = 'AutoDelayLabel'
@@ -55,9 +55,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = MarkupWordTimeTrackBar
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 14
-    Top = 328
-    Width = 130
+    Height = 18
+    Top = 393
+    Width = 171
     BorderSpacing.Left = 6
     BorderSpacing.Top = 2
     Caption = 'MarkupWordDelayMinLabel'
@@ -68,10 +68,10 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 397
-    Height = 14
-    Top = 328
-    Width = 134
+    Left = 453
+    Height = 18
+    Top = 393
+    Width = 175
     Alignment = taRightJustify
     Anchors = [akTop, akRight]
     BorderSpacing.Top = 2
@@ -84,10 +84,10 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = MarkupWordMinLabel
     AnchorSideTop.Side = asrCenter
-    Left = 142
-    Height = 14
-    Top = 328
-    Width = 114
+    Left = 183
+    Height = 18
+    Top = 393
+    Width = 149
     BorderSpacing.Left = 6
     BorderSpacing.Top = 24
     Caption = 'MarkupWordDelayLabel'
@@ -99,9 +99,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = MarkupWordFullLenSpin
     Left = 6
-    Height = 14
-    Top = 262
-    Width = 120
+    Height = 18
+    Top = 322
+    Width = 156
     BorderSpacing.Left = 6
     Caption = 'MarkupWordFullLenLabel'
     ParentColor = False
@@ -114,7 +114,7 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 4
-    Top = 175
+    Top = 217
     Width = 60
     BorderSpacing.Top = 6
     BorderSpacing.Bottom = 6
@@ -127,8 +127,8 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 4
-    Top = 75
-    Width = 537
+    Top = 118
+    Width = 634
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 6
     BorderSpacing.Bottom = 6
@@ -139,9 +139,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = AutoDelayLabel
     AnchorSideTop.Side = asrBottom
     Left = 66
-    Height = 14
-    Top = 170
-    Width = 138
+    Height = 18
+    Top = 210
+    Width = 181
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'MarkupWordGroupLabel'
@@ -156,10 +156,10 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 210
+    Left = 253
     Height = 4
-    Top = 175
-    Width = 327
+    Top = 217
+    Width = 381
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
@@ -173,8 +173,8 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 4
-    Top = 348
-    Width = 537
+    Top = 417
+    Width = 634
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 6
     BorderSpacing.Bottom = 6
@@ -185,9 +185,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = BracketCombo
     AnchorSideTop.Side = asrCenter
     Left = 162
-    Height = 14
-    Top = 361
-    Width = 62
+    Height = 18
+    Top = 433
+    Width = 84
     BorderSpacing.Around = 6
     Caption = 'BracketLabel'
     ParentColor = False
@@ -198,10 +198,10 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = BracketLabel
     AnchorSideTop.Side = asrCenter
     Cursor = crHandPoint
-    Left = 230
-    Height = 14
-    Top = 361
-    Width = 55
+    Left = 252
+    Height = 18
+    Top = 433
+    Width = 75
     BorderSpacing.Around = 6
     Caption = 'BracketLink'
     Font.Color = clBlue
@@ -217,10 +217,10 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = MarkupWordNoTimerCheckBox
     AnchorSideTop.Side = asrCenter
     Cursor = crHandPoint
-    Left = 177
-    Height = 14
-    Top = 191
-    Width = 55
+    Left = 231
+    Height = 18
+    Top = 236
+    Width = 75
     BorderSpacing.Left = 6
     Caption = 'BracketLink'
     Font.Color = clBlue
@@ -234,9 +234,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
     Left = 6
-    Height = 17
+    Height = 22
     Top = 6
-    Width = 189
+    Width = 251
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'AutoRemoveEmptyMethodsOnSave'
@@ -247,9 +247,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = AutoRemoveEmptyMethodsOnSave
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 17
-    Top = 29
-    Width = 173
+    Height = 22
+    Top = 34
+    Width = 227
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'AutoToolTipSymbToolsCheckBox'
@@ -257,12 +257,12 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
   end
   object AutoCompleteBlockCheckBox: TCheckBox[17]
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = AutoToolTipSymbToolsCheckBox
+    AnchorSideTop.Control = AutoToolTipExprEvalCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 17
-    Top = 52
-    Width = 157
+    Height = 22
+    Top = 90
+    Width = 213
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'AutoCompleteBlockCheckBox'
@@ -270,12 +270,12 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
   end
   object AutoToolTipExprEvalCheckBox: TCheckBox[18]
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = ToolTipBevel
+    AnchorSideTop.Control = AutoToolTipSymbToolsCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 17
-    Top = 85
-    Width = 164
+    Height = 22
+    Top = 62
+    Width = 213
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'AutoToolTipExprEvalCheckBox'
@@ -283,21 +283,21 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
   end
   object AutoDelayTrackBar: TTrackBar[19]
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = AutoToolTipExprEvalCheckBox
+    AnchorSideTop.Control = AutoHintAndCompletionDelayLabel
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 6
     Height = 40
-    Top = 108
-    Width = 525
+    Top = 144
+    Width = 622
     Frequency = 250
     Max = 4000
     Min = 500
     Position = 500
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 6
-    BorderSpacing.Top = 6
+    BorderSpacing.Top = 1
     BorderSpacing.Right = 6
     TabOrder = 4
   end
@@ -309,8 +309,8 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 6
     Height = 40
-    Top = 286
-    Width = 525
+    Top = 351
+    Width = 622
     Frequency = 250
     Max = 4000
     Min = 500
@@ -326,9 +326,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = MarkupWordNoTimerCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 17
-    Top = 213
-    Width = 134
+    Height = 22
+    Top = 262
+    Width = 172
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'MarkupWordNoKeyword'
@@ -341,9 +341,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 132
-    Height = 21
-    Top = 259
+    Left = 168
+    Height = 27
+    Top = 318
     Width = 48
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
@@ -354,9 +354,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = MarkupWordGroupLabel
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 17
-    Top = 190
-    Width = 165
+    Height = 22
+    Top = 234
+    Width = 219
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'MarkupWordNoTimerCheckBox'
@@ -367,9 +367,9 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideTop.Control = MarkupWordNoKeyword
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 17
-    Top = 236
-    Width = 99
+    Height = 22
+    Top = 290
+    Width = 128
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'MarkupWordTrim'
@@ -382,16 +382,26 @@ inherited EditorCodetoolsOptionsFrame: TEditorCodetoolsOptionsFrame
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 21
-    Top = 358
+    Height = 31
+    Top = 427
     Width = 150
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
-    ItemHeight = 13
+    ItemHeight = 0
     OnChange = BracketComboChange
     OnExit = BracketComboExit
     OnKeyDown = BracketComboKeyDown
     Style = csDropDownList
     TabOrder = 10
+  end
+  object AutoHintAndCompletionDelayLabel: TLabel[26]
+    AnchorSideLeft.Control = ToolTipBevel
+    Left = 6
+    Height = 18
+    Top = 125
+    Width = 225
+    BorderSpacing.Left = 6
+    Caption = 'AutoHintAndCompletionDelayLabel'
+    ParentColor = False
   end
 end
